--- a/src/components/image_carousel/image_carousel.scss
+++ b/src/components/image_carousel/image_carousel.scss
@@ -5,6 +5,7 @@
 $osg-carousel-image-height-small: 290;
 $osg-carousel-image-height-medium: 540;
 $osg-carousel-image-height-large: 725;
+
 .osg-carousel {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -75,7 +76,7 @@ $osg-carousel-image-height-large: 725;
   }
 
   &__info {
-    @extend %osg-padding-vertical-0, %osg-padding-horizontal-4, %osg-padding-0-breakpoint-large;
+    @extend %osg-padding-top-1, %osg-padding-top-2-breakpoint-large, %osg-padding-horizontal-4, %osg-padding-horizontal-0-breakpoint-large;
     grid-column: span 12 / span 12;
   }
 }
